# cdxjGenerator

./: .gitignore  LICENSE  README.md  cdxGenerator.py  cdxjGenerator.py  pyproject.toml  pyproject_nobinary.toml  requirements.txt  setup.py
cdxjGenerator/: __init__.py  __main__.py  cdxjGenerator.py
tests/: format.py
